objects/Survey__c.object
<CustomObject>
    <description>Hold Survey data</description>
    <fields>
        <fullName>Borough_Areas__c</fullName>
        <label>Borough/Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barking &amp; Dagenham</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Blackburn</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Burnley</fullName>
                </value>
                <value>
                    <fullName>Bury</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>City of London</fullName>
                </value>
                <value>
                    <fullName>Coventry</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>Dudley</fullName>
                </value>
                <value>
                    <fullName>Ealing</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
                <value>
                    <fullName>Hammersmith &amp; Fulham</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Harrow</fullName>
                </value>
                <value>
                    <fullName>Havering</fullName>
                </value>
                <value>
                    <fullName>Hillingdon</fullName>
                </value>
                <value>
                    <fullName>Hounslow</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Kensington &amp; Chelsea</fullName>
                </value>
                <value>
                    <fullName>Kingston</fullName>
                </value>
                <value>
                    <fullName>Lambeth</fullName>
                </value>
                <value>
                    <fullName>Lewisham</fullName>
                </value>
                <value>
                    <fullName>Manchester</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster_Wave_Entered__c</fullName>
        <formula>Wave__r.Wave_Cluster__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster - Wave Entered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Wave_Not_Entered__c</fullName>
        <label>Cluster - Wave Not Entered</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <formula>IF( ISBLANK( Wave__c  ), Cluster_Wave_Not_Entered__c,Cluster_Wave_Entered__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_s_TCN_Id__c</fullName>
        <formula>Contact_lookup__r.TCNContactId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact&apos;s TCN Id formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_TCN_Id_code__c</fullName>
        <label>Contact&apos;s TCN Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desire_to_remain_involved_0_10__c</fullName>
        <inlineHelpText>Survey Question: Would you want to get involved in a day like this again? (10 = yes definitely! 0 = no thanks)</inlineHelpText>
        <label>Desire to remain involved (0-10)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_rating_0_10__c</fullName>
        <inlineHelpText>Survey Question: On a scale of 0 to 10 please rate the day</inlineHelpText>
        <label>Event rating (0-10)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_YPs_on_Wave__c</fullName>
        <formula>Wave__r.Total_Assigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of YPs on Wave</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Acceptblame__c</fullName>
        <label>PCKO Acceptblame</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Backgroundaffectstrust__c</fullName>
        <label>PCKO Backgroundaffectstrust</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Bringtogether__c</fullName>
        <label>PCKO Bringtogether</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Differentthinking__c</fullName>
        <label>PCKO Differentthinking</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Explainthoughts__c</fullName>
        <label>PCKO Explainthoughts</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Feelintheirplace__c</fullName>
        <label>PCKO Feelintheirplace</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Gettingalong__c</fullName>
        <label>PCKO Gettingalong</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Giveandtake__c</fullName>
        <label>PCKO Giveandtake</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_IDowhatIneed__c</fullName>
        <label>PCKO IDowhatIneed</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Influencedecisions__c</fullName>
        <label>PCKO Influencedecisions</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Learnfrommistakes__c</fullName>
        <label>PCKO Learnfrommistakes</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Listening__c</fullName>
        <label>PCKO Listening</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Lookingfromperspective__c</fullName>
        <label>PCKO Lookingfromperspective</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Mixingwithdifferentpeople__c</fullName>
        <label>PCKO Mixingwithdifferentpeople</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Motivationenergy__c</fullName>
        <label>PCKO Motivationenergy</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Presentationconfidence__c</fullName>
        <label>PCKO Presentationconfidence</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Putinshoes__c</fullName>
        <label>PCKO Putinshoes</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Relyonothers__c</fullName>
        <label>PCKO Relyonothers</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Respectingdifferentpov__c</fullName>
        <label>PCKO Respectingdifferentpov</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Responsibility__c</fullName>
        <label>PCKO Responsibility</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Responsiblitytowardscommunity__c</fullName>
        <label>PCKO Responsiblitytowardscommunity</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Sharingideas__c</fullName>
        <label>PCKO Sharingideas</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Sidesofdisagreement__c</fullName>
        <label>PCKO Sidesofdisagreement</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Supportingpeople__c</fullName>
        <label>PCKO Supportingpeople</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Thinkingthrough__c</fullName>
        <label>PCKO Thinkingthrough</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Trustingmyself__c</fullName>
        <label>PCKO Trustingmyself</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_TrustpeopleIhavejustmet__c</fullName>
        <label>PCKO TrustpeopleIhavejustmet</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Trustworthyneighbourhood__c</fullName>
        <label>PCKO Trustworthyneighbourhood</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Trustworthypeople__c</fullName>
        <label>PCKO Trustworthypeople</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Understanddifferentlives__c</fullName>
        <label>PCKO Understanddifferentlives</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Understandingdifferentpov__c</fullName>
        <label>PCKO Understandingdifferentpov</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Understandmypoint__c</fullName>
        <label>PCKO Understandmypoint</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Valuablerole__c</fullName>
        <label>PCKO Valuablerole</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_WhatImean__c</fullName>
        <label>PCKO WhatImean</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCKO_Work__c</fullName>
        <label>PCKO Work</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCStaff_ActinstructorwithStaff__c</fullName>
        <inlineHelpText>The activity instructor&apos;s ability to work with you</inlineHelpText>
        <label>PCStaff ActinstructorwithStaff</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCStaff_ActinstructorwithYP__c</fullName>
        <inlineHelpText>The activity instructor&apos;s ability to relate to the young people</inlineHelpText>
        <label>PCStaff ActinstructorwithYP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCStaff_Activities__c</fullName>
        <inlineHelpText>The activities</inlineHelpText>
        <label>PCStaff Activities</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCStaff_Corestaffsupport__c</fullName>
        <inlineHelpText>The support you have had from The Challenge&apos;s core staff.</inlineHelpText>
        <label>PCStaff Corestaffsupport</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCStaff_Evesessions__c</fullName>
        <inlineHelpText>The evening sessions</inlineHelpText>
        <label>PCStaff Evesessions</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCStaff_Evesessionsmaterials__c</fullName>
        <inlineHelpText>The evening session materials</inlineHelpText>
        <label>PCStaff Evesessionsmaterials</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCStaff_Managingbehaviour__c</fullName>
        <inlineHelpText>Your confidence in managing challenging behavior</inlineHelpText>
        <label>PCStaff Managingbehaviour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCStaff_Overallexp__c</fullName>
        <inlineHelpText>Overall Experience</inlineHelpText>
        <label>PCStaff Overallexp</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCStaff_Overallorganisation__c</fullName>
        <inlineHelpText>The overall organisation of the week</inlineHelpText>
        <label>PCStaff Overallorganisation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCStaff_Tcnpreparation__c</fullName>
        <inlineHelpText>How well did The Challenge prepare you for the week</inlineHelpText>
        <label>PCStaff Tcnpreparation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCStaff_Teambond__c</fullName>
        <inlineHelpText>How well your team has bonded</inlineHelpText>
        <label>PCStaff Teambond</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCStaff_Transport__c</fullName>
        <inlineHelpText>The transport</inlineHelpText>
        <label>PCStaff Transport</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCStaff_Wavestaffsupport__c</fullName>
        <inlineHelpText>The support you have had from other staff on your wave.</inlineHelpText>
        <label>PCStaff Wavestaffsupport</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCStaff_Ypchallengelevel__c</fullName>
        <inlineHelpText>The overall level of challenge for the young people</inlineHelpText>
        <label>PCStaff Ypchallengelevel</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYP_Accommodation__c</fullName>
        <description>PCYP Accommodation</description>
        <label>PCYP Accommodation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYP_ActInstructor__c</fullName>
        <inlineHelpText>Your activity instructor</inlineHelpText>
        <label>PCYP ActInstructor</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYP_Activities__c</fullName>
        <inlineHelpText>The activities</inlineHelpText>
        <label>PCYP Activities</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYP_Challengelevel__c</fullName>
        <inlineHelpText>The overall level of challenge</inlineHelpText>
        <label>PCYP Challengelevel</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYP_Evesessions__c</fullName>
        <inlineHelpText>The evening sessions</inlineHelpText>
        <label>PCYP Evesessions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYP_Food__c</fullName>
        <inlineHelpText>The food</inlineHelpText>
        <label>PCYP Food</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYP_Freetime__c</fullName>
        <inlineHelpText>The free time</inlineHelpText>
        <label>PCYP Freetime</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYP_Overallexp__c</fullName>
        <inlineHelpText>Overall Experience</inlineHelpText>
        <label>PCYP Overallexp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYP_Teambond__c</fullName>
        <inlineHelpText>Your team bonding</inlineHelpText>
        <label>PCYP Teambond</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Venue_NEW__c</fullName>
        <formula>IF( ISBLANK( Wave__c ),  PC_Venue__c , PC_Venue_Wave_Entered__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Venue_Wave_Entered__c</fullName>
        <formula>Wave__r.PC_venue__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC Venue - Wave Entered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Venue__c</fullName>
        <label>PC Venue - Wave Not Entered</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCAStaff_Bigchallenge__c</fullName>
        <inlineHelpText>Your Big Challenge event</inlineHelpText>
        <label>RCAStaff Bigchallenge</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_CampaignChallenge__c</fullName>
        <label>RCAStaff CampaignChallenge</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_CampaignObjectives__c</fullName>
        <label>RCAStaff CampaignObjectives</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_CampaignPreparation__c</fullName>
        <label>RCAStaff CampaignPreparation</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_CampaignSupport__c</fullName>
        <label>RCAStaff CampaignSupport</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_Campaignevent__c</fullName>
        <inlineHelpText>Your Campaign event</inlineHelpText>
        <label>RCAStaff Campaignevent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_Campaignplanningevent__c</fullName>
        <label>RCAStaff Campaignplanningevent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_Corestaffsupport__c</fullName>
        <inlineHelpText>The support you have had from The Challenge&apos;s core staff.</inlineHelpText>
        <label>RCAStaff Corestaffsupport</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_Dayvenues__c</fullName>
        <inlineHelpText>The venues you used during the day.</inlineHelpText>
        <label>RCAStaff Dayvenues</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_Exhibition__c</fullName>
        <label>RCAStaff Exhibition</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_Overallexp__c</fullName>
        <inlineHelpText>Overall Experience</inlineHelpText>
        <label>RCAStaff Overallexp</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_Overallorganisation__c</fullName>
        <inlineHelpText>The overall organisation of the week</inlineHelpText>
        <label>RCAStaff Overallorganisation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_PartnerChallenge__c</fullName>
        <label>RCAStaff PartnerChallenge</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_Partners__c</fullName>
        <inlineHelpText>The Partners you worked with</inlineHelpText>
        <label>RCAStaff Partners</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_Sponsorshipevent__c</fullName>
        <inlineHelpText>Your Sponsorship event</inlineHelpText>
        <label>RCAStaff Sponsorshipevent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_Tcnpreparation__c</fullName>
        <inlineHelpText>How well did The Challenge prepare you for the week</inlineHelpText>
        <label>RCAStaff Tcnpreparation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_Transport__c</fullName>
        <inlineHelpText>The transport</inlineHelpText>
        <label>RCAStaff Transport</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_Wavestaffsupport__c</fullName>
        <inlineHelpText>The support you have had from other staff on your wave.</inlineHelpText>
        <label>RCAStaff Wavestaffsupport</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_YPEngagement__c</fullName>
        <inlineHelpText>The young people&apos;s engagement with the phase</inlineHelpText>
        <label>RCAStaff YPEngagement</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAStaff_Ypchallengelevel__c</fullName>
        <inlineHelpText>The overall level of challenge for the young people</inlineHelpText>
        <label>RCAStaff Ypchallengelevel</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAYP_Bigchallenge__c</fullName>
        <inlineHelpText>Your Big Challenge event</inlineHelpText>
        <label>RCAYP Bigchallenge</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAYP_CampaignAchievement__c</fullName>
        <label>RCAYP CampaignAchievement</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAYP_Campaignevent__c</fullName>
        <inlineHelpText>Your Campaign event</inlineHelpText>
        <label>RCAYP Campaignevent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAYP_Campaignplanningevent__c</fullName>
        <label>RCAYP_Campaignplanningevent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAYP_Challengelevel__c</fullName>
        <inlineHelpText>The overall level of challenge</inlineHelpText>
        <label>RCAYP Challengelevel</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAYP_Dayvenues__c</fullName>
        <inlineHelpText>The venues you used during the day.</inlineHelpText>
        <label>RCAYP Dayvenues</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAYP_Exhibition__c</fullName>
        <label>RCAYP Exhibition</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAYP_Mentors__c</fullName>
        <inlineHelpText>Your Mentors</inlineHelpText>
        <label>RCAYP Mentors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAYP_Overallexp__c</fullName>
        <inlineHelpText>Overall Experience</inlineHelpText>
        <label>RCAYP Overallexp</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAYP_PartnerChallenge__c</fullName>
        <label>RCAYP PartnerChallenge</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAYP_Partners__c</fullName>
        <inlineHelpText>The Partners you worked with</inlineHelpText>
        <label>RCAYP Partners</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCAYP_Sponsorshipevent__c</fullName>
        <inlineHelpText>Your Sponsorship event</inlineHelpText>
        <label>RCAYP Sponsorshipevent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_Behaviourmanagement__c</fullName>
        <inlineHelpText>Knowledge of role in behavior management system</inlineHelpText>
        <label>RCDStaff Behaviourmanagement</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_CampaignChallengeexp__c</fullName>
        <label>RCDStaff CampaignChallengeexp</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RCDStaff_CampaignPreparation__c</fullName>
        <label>RCDStaff CampaignPreparation</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_Commpartner__c</fullName>
        <inlineHelpText>Working with your Community partner</inlineHelpText>
        <label>RCDStaff Commpartner</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_Corestaffsupport__c</fullName>
        <inlineHelpText>The support you have had from The Challenge&apos;s core staff.</inlineHelpText>
        <label>RCDStaff Corestaffsupport</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_Dayvenues__c</fullName>
        <inlineHelpText>The venues you used during the day.</inlineHelpText>
        <label>RCDStaff Dayvenues</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_DeliveringRCD__c</fullName>
        <label>RCDStaff DeliveringRCD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_Managingbehaviour__c</fullName>
        <inlineHelpText>Your confidence in managing challenging behavior</inlineHelpText>
        <label>RCDStaff Managingbehaviour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_Overallexp__c</fullName>
        <inlineHelpText>Overall Experience</inlineHelpText>
        <label>RCDStaff Overallexp</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_Overallorganisation__c</fullName>
        <inlineHelpText>The overall organisation of the week</inlineHelpText>
        <label>RCDStaff Overallorganisation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_PartnerChallengeAct__c</fullName>
        <label>RCDStaff PartnerChallengeAct</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_PartnerChallengeTeamcommitment__c</fullName>
        <label>RCDStaff PartnerChallengeTeamcommitment</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_Pitch__c</fullName>
        <inlineHelpText>The Pitch</inlineHelpText>
        <label>RCDStaff Pitch</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_Profpartner__c</fullName>
        <inlineHelpText>Working with your Professional partner</inlineHelpText>
        <label>RCDStaff Profpartner</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_Recommendation__c</fullName>
        <inlineHelpText>Recommend to a friend</inlineHelpText>
        <label>RCDStaff Recommendation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_Riskmanagement__c</fullName>
        <inlineHelpText>Knowledge of role in risk management system</inlineHelpText>
        <label>RCDStaff Riskmanagement</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_SponsorshipChallengeexp__c</fullName>
        <label>RCDStaff SponsorshipChallengeexp</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_Tcnpreparation__c</fullName>
        <inlineHelpText>How well did The Challenge prepare you for the week</inlineHelpText>
        <label>RCDStaff Tcnpreparation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_Transport__c</fullName>
        <inlineHelpText>The transport</inlineHelpText>
        <label>RCDStaff Transport</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_Wavestaffsupport__c</fullName>
        <inlineHelpText>The support you have had from other staff on your wave.</inlineHelpText>
        <label>RCDStaff Wavestaffsupport</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDStaff_Ypchallengelevel__c</fullName>
        <inlineHelpText>The overall level of challenge for the young people</inlineHelpText>
        <label>RCDStaff Ypchallengelevel</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RCDYP_Associatementor__c</fullName>
        <inlineHelpText>Becoming an Associate Mentor</inlineHelpText>
        <label>RCDYP Associatementor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>